# RAGIncidentApp

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.mock  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: TEAMS_INTEGRATION.md
scripts/: create_test_data.py  ingest_confluence.py  test_email.py
src/: main.py
src/config/: logging_config.py  settings.py
src/email_receiver/: __init__.py  email_parser.py  smtp_server.py  trigger_validator.py
src/ingestion/: __init__.py  confluence_client.py  document_processor.py  embedder.py
src/mocks/: __init__.py  app.py  confluence_mock.py  servicenow_mock.py
src/orchestrator/: __init__.py  workflow.py
src/rag/: __init__.py  generator.py  retriever.py  vector_store.py
src/servicenow/: __init__.py  client.py  incident_builder.py
src/teams/: __init__.py  client.py
tests/: __init__.py  conftest.py
tests/e2e/: test_api.py
tests/integration/: test_workflow.py
tests/unit/: test_document_processor.py  test_email_parser.py  test_embedder.py  test_incident_builder.py
